--- a/config/crd/bases/policies.kubewarden.io_admissionpolicies.yaml
+++ b/config/crd/bases/policies.kubewarden.io_admissionpolicies.yaml
@@ -244,7 +244,7 @@ spec:
                   ClusterAdmissionPolicy resource.  Known .status.conditions.types
                   are: "PolicyServerSecretReconciled", "PolicyServerConfigMapReconciled",
                   "PolicyServerDeploymentReconciled", "PolicyServerServiceReconciled"
-                  and "ClusterAdmissionPolicyActive"'
+                  and "AdmissionPolicyActive"'
                 items:
                   description: "Condition contains details for one aspect of the current
                     state of this API Resource. --- This struct is intended for direct
@@ -316,12 +316,20 @@ spec:
                 x-kubernetes-list-map-keys:
                 - type
                 x-kubernetes-list-type: map
+              mode:
+                description: PolicyMode represents the observed policy mode of this
+                  policy in the associated PolicyServer configuration
+                enum:
+                - protect
+                - monitor
+                - unknown
+                type: string
               policyStatus:
-                description: PolicyStatus represents whether this ClusterAdmissionPolicy
-                  is unscheduled, unschedulable, pending, or active.
+                description: PolicyStatus represents whether this AdmissionPolicy
+                  is unscheduled, pending, or active.
                 enum:
                 - unscheduled
-                - unschedulable
+                - scheduled
                 - pending
                 - active
                 type: string
