--- a/.github/workflows/container-build.yml
+++ b/.github/workflows/container-build.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   build:
     name: Build
-    uses: kubewarden/kubewarden-controller/.github/workflows/container-image.yml@main
+    uses: raulcabello/kubewarden-controller/.github/workflows/container-image.yml@main
     with:
       push-image: true
 
@@ -33,6 +33,6 @@ jobs:
       - name: Sign the images
         run: |
           cosign sign \
-            ${{needs.build.outputs.repository}}@${{needs.build.outputs.digest}}
+            ${{needs.build.outputs.repository}}@a${{needs.build.outputs.digest}}
         env:
           COSIGN_EXPERIMENTAL: 1
