--- a/.github/workflows/container-image.yml
+++ b/.github/workflows/container-image.yml
@@ -18,7 +18,7 @@ on:
         value: ${{ jobs.build.outputs.artifact }}
       digest:
         description: "Image digest"
-        value: ${{ jobs.build.outputs.digest }}
+        value: "sha"
 
 
 
