--- a/.github/workflows/container-build.yml
+++ b/.github/workflows/container-build.yml
@@ -33,6 +33,6 @@ jobs:
       - name: Sign the images
         run: |
           cosign sign \
-            ${{needs.build.outputs.repository}}@a${{needs.build.outputs.digest}}
+            ${{needs.build.outputs.repository}}@${{needs.build.outputs.digest}}
         env:
           COSIGN_EXPERIMENTAL: 1
